Revert "* Update icon... Make it more flat but with a inspiration on the old"
This reverts commit a22192a87fc13e19170e82fa2cc9385466655642.

--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,5 +5,5 @@
         android:viewportHeight="2000">
   <path
       android:pathData="M0,0h2000v2000h-2000z"
-      android:fillColor="#FFFFFF"/>
+      android:fillColor="#03a9f4"/>
 </vector>
