--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -29,7 +29,7 @@
 
     <color name="primary_text_dark">#ffffff</color>
 
-    <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="ic_launcher_background">#03A9F4</color>
 
     <color name="text_highlight">#6680cbc4</color>
 
